--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@erc7824/nitrolite": "^0.5.3",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -62,6 +63,7 @@
     "vaul": "^0.9.9",
     "viem": "^2.45.1",
     "wagmi": "^3.4.2",
+    "ws": "^8.19.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
