--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.83.0",
+    "@types/qrcode": "^1.5.6",
     "@wagmi/connectors": "^7.1.6",
     "@wagmi/core": "^3.3.2",
     "class-variance-authority": "^0.7.1",
@@ -51,10 +52,12 @@
     "lucide-react": "^0.462.0",
     "next": "16.1.6",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.61.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
