--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
+    "mock-yellow": "tsx mock-yellow-server.ts",
     "test": "jest",
     "lint": "eslint src/**/*.ts"
   },
@@ -14,7 +15,6 @@
   "author": "SwiftPay Team",
   "license": "MIT",
   "dependencies": {
-    "@circle-fin/core": "^1.1.0",
     "@erc7824/nitrolite": "^0.1.0",
     "express": "^4.18.2",
     "ws": "^8.14.2",
