Yellow Integration II

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,12 +3,16 @@
 # Server Configuration
 PORT=3001
 WS_PORT=8080
-NODE_ENV=development
+NODE_ENV=production
 
-# Yellow Network Configuration
-YELLOW_WS_URL=wss://testnet.clearnet.yellow.com/ws
-YELLOW_NETWORK=testnet
-HUB_PRIVATE_KEY=your_hub_wallet_private_key_here
+# Yellow Network Configuration - Sepolia Sandbox
+YELLOW_WS_URL=wss://clearnet-sandbox.yellow.com/ws
+YELLOW_NETWORK=sepolia
+HUB_PRIVATE_KEY=your_account_b_private_key_here
+DEPLOYER_PRIVATE_KEY=your_account_b_private_key_here
+
+# Sepolia USDC (Circle Official Testnet)
+USDC_TOKEN_ADDRESS=0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238
 
 # Arc Blockchain Configuration
 ARC_RPC_URL=https://rpc.testnet.arc.network
