--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -19,6 +19,12 @@ ARBITRUM_SEPOLIA_RPC_URL=https://arbitrum-sepolia-rpc.publicnode.com
 ARC_TESTNET_RPC_URL=https://rpc.arc.network
 
 # ============================================
+# DEPLOYMENT RPC URL
+# ============================================
+# Deployed contract addresses (auto-populated after deployment)
+ARC_RPC_URL=https://rpc.testnet.arc.network
+
+# ============================================
 # BLOCK EXPLORER API KEYS
 # ============================================
 # Etherscan (for Sepolia verification)
