--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,15 +8,26 @@ NODE_ENV=production
 # Yellow Network Configuration - Sepolia Sandbox
 YELLOW_WS_URL=wss://clearnet-sandbox.yellow.com/ws
 YELLOW_NETWORK=sepolia
-HUB_PRIVATE_KEY=your_account_b_private_key_here
-DEPLOYER_PRIVATE_KEY=your_account_b_private_key_here
+HUB_PRIVATE_KEY=0x...
+HUB_ADDRESS=0x...
 
 # Sepolia USDC (Circle Official Testnet)
 USDC_TOKEN_ADDRESS=0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238
 
 # Arc Blockchain Configuration
 ARC_RPC_URL=https://rpc.testnet.arc.network
-VAULT_ADDRESS=your_deployed_vault_address
+ARC_CHAIN_ID=5042002
+VAULT_ADDRESS=0x...
+ARC_USDC_ADDRESS=0x...
+
+# ENS Configuration
+ENS_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/YOUR_KEY
+ENS_SEPOLIA_RPC=https://eth-sepolia.g.alchemy.com/v2/your_alchemy_key
+
+# Avail Nexus Configuration
+SEPOLIA_RPC_URL=https://ethereum-sepolia-rpc.publicnode.com
+AVAIL_NETWORK=testnet
+AVAIL_ENABLED=true
 
 # Circle Configuration (Optional for future use)
 CIRCLE_API_KEY=
