--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,19 @@
   "description": "SwiftPay Backend Hub - Circle Gateway Integration",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --skipLibCheck",
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "mock-yellow": "tsx mock-yellow-server.ts",
     "test": "jest",
+    "test:settlement": "tsx test-settlement-flow.ts",
     "lint": "eslint src/**/*.ts"
   },
   "keywords": ["payments", "arc", "circle", "usdc", "crosschain"],
   "author": "SwiftPay Team",
   "license": "MIT",
   "dependencies": {
-    "@erc7824/nitrolite": "^0.1.0",
+    "viem": "2.0.0",
     "express": "^4.18.2",
     "ws": "^8.14.2",
     "ethers": "^6.13.0",
