--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@avail-project/nexus-core": "^1.0.0",
+    "@ensdomains/ensjs": "^4.0.0",
     "@erc7824/nitrolite": "^0.5.3",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -50,11 +51,13 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.33.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next": "16.1.6",
     "next-themes": "^0.3.0",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.0.0",
     "react": "19.2.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.2.3",
@@ -69,9 +72,7 @@
     "viem": "^2.21.0",
     "wagmi": "^2.14.0",
     "ws": "^8.19.0",
-    "zod": "^3.25.76",
-    "@ensdomains/ensjs": "^4.0.0",
-    "qrcode.react": "^4.0.0"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
